# HW_AVS

./: README.md
Procedure/: CMakeLists.txt  container.cpp  container.h  main.cpp  plain.cpp  plain.h  shape.cpp  shape.h  ship.cpp  ship.h  train.cpp  train.h
Procedure/Tests/: In.txt
